feat(Sending deletion): implemented sending deletion from database